--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -718,7 +718,7 @@ input[type=checkbox]:disabled + .button--toggle::after {
   gap: 1rem;
   margin: 0 auto;
   margin-bottom: 1.5rem;
-  /* align-items: flex-start; */
+  align-items: flex-start;
 }
 @media (max-width: 1022px) {
   .cards {
